Added submission method

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h3>
 <a id="embrace-the-big-pockets" class="anchor" href="#embrace-the-big-pockets" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Embrace the big pockets!</h3>
 
-<p>Let's celebrate clothes that have big pockets - send us a pic, a description, and ideally a link to where we can get it.</p>
+<p>Let's celebrate clothes that have big pockets - <a href="https://1drv.ms/xs/s!AiZm2P6YHtSfiW39itkxlFlmu4gt" title="Girls With Deep POckets clothes submission form">let us know so we can include it here</a>.</p>
         </section>
 
         <footer>
