--- a/about-gwdp/index.html
+++ b/about-gwdp/index.html
@@ -601,6 +601,16 @@ I don&rsquo;t know whether it&rsquo;s the fashion industry&rsquo;s focus on tryi
 </footer>
 
 
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-86386589-1', 'auto');
+ga('send', 'pageview');
+</script>
+
 <script src="http://girlswithdeeppockets.com/fancybox/jquery.fancybox.pack.js"></script>
 <script src="http://girlswithdeeppockets.com/js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
