Changed follow link

--- a/about-gwdp/index.html
+++ b/about-gwdp/index.html
@@ -159,7 +159,7 @@ I don&rsquo;t know whether it&rsquo;s the fashion industry&rsquo;s focus on tryi
       <h3 id="title">A site for celebrating clothes with pockets</h3>
       <span id="location"><i class="fa fa-map-marker"></i>Utopia, where stuff fits in pockets</span>
       
-          <a id="follow" href="https://github.com/stephlocke">
+          <a id="follow" href="https://twitter.com/gwdeeppockets">
               Follow
           </a>
       
