--- a/gudrun-sjödén/index.html
+++ b/gudrun-sjödén/index.html
@@ -162,7 +162,7 @@ Ann had this to say:
       <h3 id="title">A site for celebrating clothes with pockets</h3>
       <span id="location"><i class="fa fa-map-marker"></i>Utopia, where stuff fits in pockets</span>
       
-          <a id="follow" href="https://github.com/stephlocke">
+          <a id="follow" href="https://twitter.com/gwdeeppockets">
               Follow
           </a>
       
