Use the light logo

--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
     <div class="outer">
       <a href="http://girlswithdeeppockets.com/" id="logo">
           
-          <i class="logo" style="background-image: url('http://girlswithdeeppockets.com/imgs/gwdplogo.png')"></i>
+          <i class="logo" style="background-image: url('http://girlswithdeeppockets.com/imgs/gwdplogolight.png')"></i>
           
           <span class="site-title">Girls with Deep Pockets</span>
       </a>
@@ -85,7 +85,7 @@
       </nav>
         <nav id="sub-nav">
           <div class="profile" id="profile-nav">
-            <a id="profile-anchor" href="javascript:;"><img class="avatar" src="http://girlswithdeeppockets.com/imgs/gwdplogo.png"><i class="fa fa-caret-down"></i></a>
+            <a id="profile-anchor" href="javascript:;"><img class="avatar" src="http://girlswithdeeppockets.com/imgs/gwdplogolight.png"><i class="fa fa-caret-down"></i></a>
           </div>
         </nav>
         <div id="search-form-wrap">
@@ -131,7 +131,7 @@
     <aside id="profile">
   <div class="inner profile-inner">
     <div class="base-info profile-block">
-      <img id="avatar" src="http://girlswithdeeppockets.com/imgs/gwdplogo.png">
+      <img id="avatar" src="http://girlswithdeeppockets.com/imgs/gwdplogolight.png">
       <h2 id="name">Girls with Deep Pockets</h2>
       <h3 id="title">A site for celebrating clothes with pockets</h3>
       <span id="location"><i class="fa fa-map-marker"></i>Utopia, where stuff fits in pockets</span>
