--- a/gudrun-sjödén/index.html
+++ b/gudrun-sjödén/index.html
@@ -530,7 +530,7 @@ Ann had this to say:
                 <div class="item-thumbnail">
                     <a href="http://girlswithdeeppockets.com/about-gwdp" class="thumbnail">
                     
-                        <span style="background-image:url(http://girlswithdeeppockets.com/banners/typing.jpg)" alt="Gudrun Sjödén" class="thumbnail-image"></span>
+                        <span style="background-image:url(http://girlswithdeeppockets.com/banners/businesscardmeme.jpg)" alt="Gudrun Sjödén" class="thumbnail-image"></span>
                     
                     </a>
                 </div>
