--- a/submitting-a-post/index.html
+++ b/submitting-a-post/index.html
@@ -569,7 +569,7 @@ draft = false
                 <div class="item-thumbnail">
                     <a href="http://girlswithdeeppockets.com/about-gwdp" class="thumbnail">
                     
-                        <span style="background-image:url(http://girlswithdeeppockets.com/banners/typing.jpg)" alt="Submitting a post" class="thumbnail-image"></span>
+                        <span style="background-image:url(http://girlswithdeeppockets.com/banners/businesscardmeme.jpg)" alt="Submitting a post" class="thumbnail-image"></span>
                     
                     </a>
                 </div>
