--- a/404.html
+++ b/404.html
@@ -307,7 +307,7 @@
                 <div class="item-thumbnail">
                     <a href="http://girlswithdeeppockets.com/about-gwdp" class="thumbnail">
                     
-                        <span style="background-image:url(http://girlswithdeeppockets.com/banners/typing.jpg)" alt="404 Page not found" class="thumbnail-image"></span>
+                        <span style="background-image:url(http://girlswithdeeppockets.com/banners/businesscardmeme.jpg)" alt="404 Page not found" class="thumbnail-image"></span>
                     
                     </a>
                 </div>
