--- a/eshakti/index.html
+++ b/eshakti/index.html
@@ -536,7 +536,7 @@ R had this to say:
                 <div class="item-thumbnail">
                     <a href="http://girlswithdeeppockets.com/about-gwdp" class="thumbnail">
                     
-                        <span style="background-image:url(http://girlswithdeeppockets.com/banners/typing.jpg)" alt="eShakti" class="thumbnail-image"></span>
+                        <span style="background-image:url(http://girlswithdeeppockets.com/banners/businesscardmeme.jpg)" alt="eShakti" class="thumbnail-image"></span>
                     
                     </a>
                 </div>
